# CATER

./: .clang-format  .clang-format-ignore  .dockerignore  .envrc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.deps  README.md  README.txt  build_appimage.sh  cater-config.cmake.in  habitrack-config.cmake.in  notes.md  run-clang-format.py
dependencies/: CMakeLists.txt  cmake_habitrack.in  cmake_habitrack.sh.in
gui/: CMakeLists.txt
gui/include/gui/: guiPreferences.h  mainWindow.h  preferences.h  preferencesDialog.h  progressStatusBar.h  qtOpencvCore.h  trackerGraphicsView.h  trackerScene.h  unaryGraphicsView.h  unaryScene.h
gui/resources/: habitrack-gui.desktop  resources.qrc
gui/src/: colors.h  guiPreferences.h  main.cpp  mainWindow.cpp  mainWindow.ui  preferences.cpp  preferencesDialog.cpp  preferencesDialog.h  preferencesDialog.ui  progressStatusBar.cpp  qtOpencvCore.cpp  resultsIO.cpp  resultsIO.h  setIO.h  trackerGraphicsView.cpp  trackerGraphicsView.h  trackerScene.cpp  unaryGraphicsView.cpp  unaryScene.cpp
interVideoLC/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  main.cpp
lib/cache/: CMakeLists.txt
lib/cache/src/: baseCache.cpp  basePairwiseCache.cpp
lib/habitrack/: CMakeLists.txt
lib/habitrack/src/: detections.cpp  habiTrack.cpp  imageViewer.cpp  manualUnaries.cpp  preferences.cpp  resultsIO.cpp  resultsIO.h  threadPool.cpp  tracker.cpp  tracker2.cpp  unaries.cpp  unaryIO.h
lib/image-processing/: CMakeLists.txt  image-processing-config.cmake.in
lib/image-processing/src/: baseFeatureContainer.cpp  baseImageContainer.cpp  descriptorCache.cpp  featureAggregator.cpp  featureCache.cpp  featureIO.h  features.cpp  geometricType.cpp  idTranslator.cpp  imageAggregator.cpp  imageCache.cpp  images.cpp  isometry.cpp  matIO.h  matches.cpp  matchesIO.h  mildRecommender.cpp  pairwiseDescriptorCache.cpp  pairwiseFeatureCache.cpp  pairwiseImageCache.cpp  ransac.cpp  superGlue.cpp  superGlueStub.cpp  transformation.cpp  unknownFeatureType.cpp  unknownFeatureType.h  unknownGeometricType.cpp  unknownGeometricType.h  util.cpp
lib/include/: io.h
lib/include/habitrack/: baseCache.h  baseDecorator.h  baseFeatureContainer.h  baseImageContainer.h  basePairwiseCache.h  cache.h  computeBehavior.h  container.h  descriptorCache.h  featureAggregator.h  featureCache.h  featureContainer.h  features.h  geometricType.h  grayDecorator.h  idTranslator.h  imageAggregator.h  imageCache.h  imageContainer.h  imageType.h  images.h  isometry.h  keyFrameRecommender.h  keyFrameSelector.h  matches.h  matchesContainer.h  mildRecommender.h  mst.h  pairRecommender.h  pairwiseDescriptorCache.h  pairwiseFeatureCache.h  pairwiseImageCache.h  panoramaStitcher.h  preferences.h  resizeDecorator.h  specialGrayDecorator.h  tracker.h  transformation.h  transitions.h  unaries.h  (+1 more)
lib/io/: CMakeLists.txt
lib/model/: CMakeLists.txt
lib/model/src/: imageViewer.cpp  model.cpp  preferences.cpp  resultsIO.cpp
lib/panorama/: CMakeLists.txt  panorama-config.cmake.in
lib/panorama/src/: affinityGlobalOptimizer.cpp  affinityGlobalOptimizer.h  gpsInterpolator.cpp  homographyGlobalOptimizer.cpp  homographyGlobalOptimizer.h  idTranslator.cpp  interExhaustiveRecommender.cpp  isometryGlobalOptimizer.cpp  isometryGlobalOptimizer.h  keyFrameRecommender.cpp  keyFrames.cpp  mst.cpp  mst.h  panoramaEngine.cpp  panoramaStitcher.cpp  settings.cpp  similarityGPSOptimizer.cpp  similarityGPSOptimizer.h  similarityGlobalOptimizer.cpp  similarityGlobalOptimizer.h  similarityTemporalConsistencyOptimizer.h  transitions.cpp
lib/progressbar/: CMakeLists.txt
lib/progressbar/src/: progressBar.cpp
lib/src/: affinityGlobalOptimizer.cpp  affinityGlobalOptimizer.h  baseCache.cpp  baseCache.h  baseDecorator.cpp  baseDecorator.h  baseFeatureContainer.cpp  baseImageContainer.cpp  basePairwiseCache.cpp  basePairwiseCache.h  cache.cpp  descriptorCache.cpp  descriptorIO.h  featureAggregator.cpp  featureCache.cpp  featureContainer.cpp  featureIO.h  features.cpp  geometricType.cpp  grayDecorator.cpp  homographyGlobalOptimizer.cpp  homographyGlobalOptimizer.h  idTranslator.cpp  imageAggregator.cpp  imageCache.cpp  imageContainer.cpp  images.cpp  io.h  isometry.cpp  isometryGlobalOptimizer.cpp  isometryGlobalOptimizer.h  keyFrameRecommender.cpp  keyFrameSelector.cpp  matIO.h  matches.cpp  matchesContainer.cpp  matchesIO.h  metrics.h  mildRecommender.cpp  mst.cpp  (+17 more)
lib/tracker/: CMakeLists.txt  tracker-config.cmake.in
lib/tracker/src/: detections.cpp  interpTracker.cpp  manualUnaries.cpp  messagePassing.cl  threadPool.cpp  tracker.cpp  tracker2.cpp  trackerChunked.cpp  trackerContinous.cpp  trackerOpenCL.cpp  unaries.cpp  unaryIO.h
lib/util/: CMakeLists.txt
lib/util/src/: log.cpp  threadPool.cpp
lib/version/: CMakeLists.txt
super/: CMakeLists.txt  cmake_cater.in  cmake_habitrack.in
tools/: CMakeLists.txt
tools/fullVideo/: CMakeLists.txt  main.cpp
tools/interact_test/: CMakeLists.txt  kde.cpp  kde.h  main.cpp  main2.cpp  main_eq.cpp  main_eq_net.cpp  main_interp.cpp  main_max.cpp  main_reverse.cpp
tools/keyframes_to_image_list/: CMakeLists.txt  main.cpp
tools/linspace_exp/: CMakeLists.txt  main.cpp
tools/match_trafo_exporter/: CMakeLists.txt  main.cpp
tools/multiVideo/: CMakeLists.txt  main.cpp
tools/opencv_pipeline/: CMakeLists.txt  main.cpp
tools/simple_tracker/: CMakeLists.txt  main.cpp
tools/singleVideo/: CMakeLists.txt  main.cpp
tools/superglue/: CMakeLists.txt  main.cpp
tools/tracker/: main.cpp
ui/cli/: CMakeLists.txt
ui/cli/src/: main.cpp
ui/gui/: CMakeLists.txt
ui/gui/cater/: CMakeLists.txt
ui/gui/common/: CMakeLists.txt
ui/gui/habitrack/: CMakeLists.txt
ui/gui/panowizard/: CMakeLists.txt
ui/gui/src/: colorDelegate.cpp  colors.h  imageViewer.cpp  keyDelegate.cpp  keyDialog.cpp  labelConfig.cpp  labelEditor.cpp  labelEditor.ui  labelIO.h  labeler.cpp  main.cpp  mainWindow.cpp  mainWindow.ui  preferencesDialog.cpp  preferencesDialog.ui  progressStatusBar.cpp  resultsIO.cpp  resultsIO.h  (+4 more)
ui/label/: CMakeLists.txt
ui/model/: CMakeLists.txt
ui/tui/: CMakeLists.txt
(+291 files in other folders)
