find_package(cxxopts 3 REQUIRED)

add_subdirectory(simple_tracker)
add_subdirectory(singleVideo)
add_subdirectory(fullVideo)
add_subdirectory(multiVideo)
add_subdirectory(match_trafo_exporter)
add_subdirectory(keyframes_to_image_list)
add_subdirectory(superglue)
add_subdirectory(opencv_pipeline)
add_subdirectory(interact_test)
add_subdirectory(linspace_exp)
